--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align ="center"> Abhinav Sinha
-logo: /assets/img/logo.png
+logo: /assets/img/1670871977627.jpeg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
